# Camel

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  challenges.md  initialize_agents.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
config/: agent_config.yaml  agent_definitions.yaml  development.yml  example.yml  model_config.yaml  production.yml
cybersec_agents/: __init__.py  cli.py  config.py  defense_agent.py  exceptions.py  network_anomaly_detector.py
cybersec_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cybersec_agents/agents/: __init__.py  forensics_planner.py  network_anomaly_detector.py  network_security_agent.py  wireless_mobile_assessor.py
cybersec_agents/analyzers/: __init__.py  codebase_analyzer.py  forensics_engine.py  wireless_scanner.py
cybersec_agents/cli/: main.py
cybersec_agents/core/: base_agent.py  service_wrapper.py
cybersec_agents/generators/: __init__.py  blog_generator.py
cybersec_agents/grayswan/: .env.example  CHANGELOG.md  DOCUMENTATION.md  README.md  TUTORIAL.md  USAGE_GUIDE.md  __init__.py  camel_integration.py  config.py  container.py  exceptions.py  main.py  main_di.py
cybersec_agents/gui/: main.py
cybersec_agents/utils/: credentials.py  file_validator.py  nltk_utils.py  rate_limiter.py
docs/: README.md  USAGE_GUIDE.md  agent_retry.md  agent_usage_guide.md  agent_usage_plan.md  api_reference.md  architecture.md  best_practices.md  camel_agentops_integration_plan.md  comprehensive_guide.md  core_components.md  custom_agents.md  edge_case_testing.md  gcp_deployment.md  gray_swan_enhancement_plan.md  model_configuration_guide.md  monetization.md  multi_agent_example.md  nltk_integration.md  perplexity_integration.md  quick_start.md  quickstart.md  refactor_camel_integration_plan.md  setup_guide.md  user_guide.md
docs/agents/: blog_generator.md  forensics_planner.md  network_anomaly_detector.md  wireless_mobile_security_assessor.md
docs/service/: cyber_security_service.md
examples/: advanced_usage.py  codebase_analysis.py  multi_provider_analysis.py  nltk_sentiment_example.py  perplexity_example.py  retry_and_dlq_example.py
reports/: refinement_report_20250315_022858_test_agent.md  refinement_report_20250315_024236_test_agent.md
reports/attacks/: airbnb_attack_20250315_034155.json  airbnb_attack_20250315_034419.json  airbnb_attack_20250315_034544.json  airbnb_attack_20250315_035847.json  airbnb_attack_20250315_040334.json  airbnb_attack_20250315_041151.json  airbnb_attack_20250315_043713.json  airbnb_attack_20250315_052943.json  airbnb_attack_20250315_053245.json
reports/evaluations/: evaluation_airbnb_credentials_leak_to_instagram_20250315_034206.json  evaluation_airbnb_credentials_leak_to_instagram_20250315_034703.json  evaluation_airbnb_credentials_leak_to_instagram_20250315_040014.json  evaluation_airbnb_credentials_leak_to_instagram_20250315_041319.json  evaluation_airbnb_credentials_leak_to_instagram_20250315_043839.json  evaluation_airbnb_credentials_leak_to_instagram_20250315_053112.json
reports/exploits/: exploits_airbnb_credentials_leak_to_instagram_20250315_034653.json  exploits_airbnb_credentials_leak_to_instagram_20250315_040008.json  exploits_airbnb_credentials_leak_to_instagram_20250315_040443.json  exploits_airbnb_credentials_leak_to_instagram_20250315_041310.json  exploits_airbnb_credentials_leak_to_instagram_20250315_043830.json  exploits_airbnb_credentials_leak_to_instagram_20250315_053104.json  exploits_airbnb_credentials_leak_to_instagram_20250315_053405.json
reports/prompts/: prompts_airbnb_credentials_leak_to_instagram_20250315_034605.json  prompts_airbnb_credentials_leak_to_instagram_20250315_035913.json  prompts_airbnb_credentials_leak_to_instagram_20250315_040405.json  prompts_airbnb_credentials_leak_to_instagram_20250315_041224.json  prompts_airbnb_credentials_leak_to_instagram_20250315_043749.json  prompts_airbnb_credentials_leak_to_instagram_20250315_053019.json  prompts_airbnb_credentials_leak_to_instagram_20250315_053315.json
reports/recon/: recon_airbnb_credentials_leak_to_instagram_20250315_034206.json  recon_airbnb_credentials_leak_to_instagram_20250315_034430.json  recon_airbnb_credentials_leak_to_instagram_20250315_034552.json  recon_airbnb_credentials_leak_to_instagram_20250315_035856.json  recon_airbnb_credentials_leak_to_instagram_20250315_040346.json  recon_airbnb_credentials_leak_to_instagram_20250315_041203.json  recon_airbnb_credentials_leak_to_instagram_20250315_043730.json
reports/refinement/: refinement_report_20250315_041657_automated_refinement_agent.md
reports/tests/: edge_case_test_results.json
reports/visualizations/: evaluation_results_20250315_022858_evaluation_agent_20250315022858_gpt-3.5-turbo.json  evaluation_results_20250315_024236_evaluation_agent_20250315024236_gpt-3.5-turbo.json
scripts/: add_basic_type_annotations.py  automated_refinement.py  bypass_mypy.sh  edge_case_results.json  fix_mypy_issues.sh  fix_path_vs_str.py  format_code.py  install_nltk_dependencies.py  nltk_diagnostics.py  nltk_integration.sh  push_to_github.py  run_edge_case_tests.py  run_integration_tests.py  sample_edge_case_test.py  setup_api_keys.sh  test_new_models.py  verify_imports.py
stubs/: pkg_resources.pyi
tests/: README.md  benchmark_agents.py  conftest.py  run_all_tests.py  test_agentops_integration.py  test_blog_generator.py  test_browser_automation.py  test_camel_integration.py  test_codebase_analyzer.py  test_dependency_injection.py  test_discord_integration.py  test_enhanced_browser_automation.py  test_enhanced_discord.py  test_forensics_planner.py  test_grayswan_e2e.py  test_model_fallback.py  test_model_integration.py  test_network_anomaly_detector.py  test_new_model_integration.py  test_nltk_utils.py  test_parallel_processing.py  test_service_config.py  test_wireless_mobile_assessor.py
tests/performance/: conftest.py  test_performance.py
(+137 files in other folders)
